fix(@findify/react-components): wrap swiper classnames with findify

--- a/packages/react-components/src/components/Swiper/styles.css
+++ b/packages/react-components/src/components/Swiper/styles.css
@@ -6,6 +6,8 @@
   --swiper-navigation-size: 44px;
 }
 
+
+.root{
 :global(.swiper-container) {
   margin-left: auto;
   margin-right: auto;
@@ -60,7 +62,7 @@
 :global(.findify-recommendation) {
   padding: 0 30px;
 }
-
+}
 /* Component styles */
 
 .root{
